--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,12 +16,12 @@
     --cor-fonte-corpo:#555;
     --cor-fonte-corpo-leve:#777;
     --cor-stride:#5669C1;
-    
+
 }
 
 body{
     font-family: 'poppins', sans-serif;
-     
+
 }
 /*----------------BANNER---------------*/
 .banner{
@@ -366,7 +366,7 @@ app.logo img{
     font-size: 18px;
 }
 
-.product-page .btn-add-to-cart {
+.btn-add-to-cart {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -374,13 +374,13 @@ app.logo img{
     padding: 20px;
     border: none;
     border-radius: 5px;
-    color: #fff;
+    color: #fff!important;
     margin-top: 20px;
     text-decoration: none;
     transition-duration: 0.3s;
 }
 
-.product-page .btn-add-to-cart:hover {
+.btn-add-to-cart:hover {
     transform: scale(1.1);
 }
 
@@ -424,8 +424,67 @@ app.logo img{
     .col-4 p{
         font-size: 24px;
     }
-        
 
 
 
+
+}
+
+.carrinho {
+    max-width: 1200px;
+    margin: 80px auto;
+    display: grid;
+    grid-template-columns: 1fr 300px;
+    gap: 20px;
+}
+
+.carrinho a {
+    text-decoration: none;
+    color: #000;
+}
+
+.carrinho img {
+    border-radius: 5px;
+}
+
+.carrinho .carrinho-table table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+.carrinho .carrinho-table table td,
+.carrinho .carrinho-table table th {
+    vertical-align: middle;
+    text-align: left;
+    padding: 10px 10px;
+}
+
+.carrinho .carrinho-table table div {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.carrinho-container {
+    padding: 20px;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+}
+
+.carrinho svg {
+    color: #7e170a;
+}
+
+.alert-cart {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    grid-column: 1/3;
+    padding: 10px 20px;
+    border-top: 5px solid #5669C1;
+}
+
+.alert-cart p {
+    font-size: 20px;
+    color: #5669C1;
 }
